sourceforge (2.5-30+) unstable; urgency=low

  * [Soon-Son] added method="post" to massmail.php which was missing so
    far so that the admin can send email to the users
  * [Roland] Revamped install-ftp.sh more or less thoroughly in order to
    finally get rid of the sneaky LDAP problems.  From what I can see, it
    works.  Yay!

 -- Roland Mas <lolando@debian.org>  Sun, 28 Jul 2002 19:59:30 +0200

sourceforge (2.5-30) unstable; urgency=high

  * [Christian] Change gid/uid attribution in ldap.php to be like in
    backend
  * [Christian] Added asciize function in ldap.php because
    LDAP expects utf-8 encoded character string (backport from 2.6)
  * [Roland] Fixed install-ftp.sh so that it actually does install stuff.
  * [Roland] Fixed a few bashisms in maintainer scripts.
  * [Roland] Fixed LDAP entries for mailing-lists (attribute cn: is not in
    the schema).
  * [Roland] Fixed user in crontab (for the DNS stuff) (closes: #147434).
  * [Roland] Fixed bug in the "Submit a bug" form: all bug admins are able
    to assign a bug from the start, not just project admins.
  * [Roland] May I introduce you to Soon-Son Kwon <kss@kldp.org> who
    recently got write access to our CVS repository.  He seems to focus on
    internationalisation and Korean translation, but he is also a source
    of bugfixes and other interesting patches.
  * [Soon-Son] applied patch for bug # 148(savannah project page).
  * [Soon-Son] added "scp" to allowed commands in cvssh.pl
  * [Soon-Son] changed hardcoded "SourceForge" to $GLOBALS[sys_name]
    so that the user can define custom site name.
  * [Soon-Son] modified .../www/forum/message.php so that it can display
    article subject correctly on the title.
  * [Soon-Son] i18n patch for *many* pages (not all yet)
  * [Soon-Son] removed "sourceforge.net" & "VA linux" specific pages
    like .../contest/*, .../mirrors/* and simplified/generalized footer
  * [Roland] Fixed search results page for Software/Group: the link was