@@ -32,15 +32,17 @@ setup_vars() {
 }
 
 show_vars () {
-    echo "=====>sf_ldap_base_dn=$sf_ldap_base_dn"
-    echo "=====>sf_ldap_admin_dn=$sf_ldap_admin_dn"
-    echo "=====>sf_ldap_bind_dn=$sf_ldap_bind_dn"
-    echo "=====>sf_ldap_passwd=$sf_ldap_passwd"
-    echo "=====>sf_ldap_host=$sf_ldap_host"
-    echo "=====>cryptedpasswd=$cryptedpasswd"
-    echo "=====>do_config=$do_config"
-    echo "=====>ldap_suffix=$ldap_suffix"
-    echo "=====>tmpfile_pattern=$tmpfile_pattern"
+    echo "sf_ldap_base_dn = '$sf_ldap_base_dn'"
+    echo "sf_ldap_admin_dn = '$sf_ldap_admin_dn'"
+    echo "sf_ldap_bind_dn = '$sf_ldap_bind_dn'"
+    echo "sf_ldap_passwd = '$sf_ldap_passwd'"
+    echo "sf_cryptedpasswd = '$sf_cryptedpasswd'"
+    echo "sf_ldap_host = '$sf_ldap_host'"
+    echo "ldap_passwd = '$ldap_passwd'"
+    echo "cryptedpasswd = '$cryptedpasswd'"
+    echo "do_config = '$do_config'"
+    echo "ldap_suffix = '$ldap_suffix'"
+    echo "tmpfile_pattern = '$tmpfile_pattern'"
 }
 
 # Check Server
@@ -419,18 +421,13 @@ case "$1" in
 		slapadd -l $tmpldif
 		rm -f $tmpldif
 		;;
-	check)
-                setup_vars
-                show_vars
-		check_server
-		;;
-        test)
+        test|check)
 	        setup_vars
+                show_vars
 	        check_server
-        	setup_robot
 		;;
 	*)
-		echo "Usage: $0 {configure|update|purge|list|empty|reset}"
+		echo "Usage: $0 {configure|update|purge|list|empty|reset|test}"
 		exit 1
 		;;
 esac
